[gd_scene load_steps=18 format=3 uid="uid://d2iw2iovmunta"]

[ext_resource type="Script" path="res://attacks/basic_melee.gd" id="1_exdix"]
[ext_resource type="Shader" path="res://art/midModulate.gdshader" id="2_huj3m"]
[ext_resource type="Texture2D" uid="uid://buyfouljcr5rq" path="res://art/melee-sheet.png" id="3_o8x58"]
[ext_resource type="Texture2D" uid="uid://b5if5kbx24jv" path="res://art/spark_particle.png" id="4_y0hb6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awplc"]
resource_local_to_scene = true
shader = ExtResource("2_huj3m")
shader_parameter/modulate = Vector4(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_5do63"]
atlas = ExtResource("3_o8x58")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkah2"]
atlas = ExtResource("3_o8x58")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4srek"]
atlas = ExtResource("3_o8x58")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx1kt"]
atlas = ExtResource("3_o8x58")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7j07"]
atlas = ExtResource("3_o8x58")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jutsc"]
atlas = ExtResource("3_o8x58")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ayg7"]
atlas = ExtResource("3_o8x58")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nic3e"]
atlas = ExtResource("3_o8x58")
region = Rect2(224, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o6bgg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5do63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkah2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4srek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx1kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7j07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jutsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ayg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nic3e")
}],
"loop": false,
"name": &"slash",
"speed": 30.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i6bfi"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3tuwe"]
resource_local_to_scene = true
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 25, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 0, 0)
angular_velocity_min = -100.0
angular_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0
hue_variation_min = -2.23517e-08
hue_variation_max = 0.1
anim_speed_min = 6.0
anim_speed_max = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptnwa"]
size = Vector2(32, 48)

[node name="BasicMelee" type="Area2D"]
z_index = 2
z_as_relative = false
position = Vector2(-1, 0)
collision_layer = 2048
collision_mask = 2048
script = ExtResource("1_exdix")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
z_as_relative = false
material = SubResource("ShaderMaterial_awplc")
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_o6bgg")
animation = &"slash"
autoplay = "slash"
frame = 7
frame_progress = 1.0

[node name="Trail" type="GPUParticles2D" parent="AnimatedSprite2D"]
z_index = -1
material = SubResource("CanvasItemMaterial_i6bfi")
amount = 80
process_material = SubResource("ParticleProcessMaterial_3tuwe")
texture = ExtResource("4_y0hb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 0)
shape = SubResource("RectangleShape2D_ptnwa")

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
